--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,10 @@ p{
     line-height: 1.5;
 }
 
+.expertise p{
+    margin-left: 30px;
+}
+
 /* ADD TO "INNOVATION & INVESTMENT SECTION (Photo by Kevin Matos on Unsplash) */
  .innovation-investment{
     background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('images/vanguard-hero.jpg') no-repeat center center/cover;
@@ -160,7 +164,6 @@ p{
     margin-bottom: 30px;
 }
 
-
 #offer{
     margin-bottom: 30px;
 }
@@ -171,6 +174,7 @@ p{
     border-radius: 10px;
     padding: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-left: 30px;
 }
 
 #offer .container:hover {
@@ -227,14 +231,15 @@ table, td, th {
     padding: 15px;
 }
 
+td{
+    text-align: center;
+}
+
 table{
     width: 100%;
     border-collapse: collapse;
 }
 
-#bar-chart{
-    margin-left: 20px;
-}
 
 #results table tr:nth-of-type(1),
 #results table tr:nth-of-type(2),
@@ -434,13 +439,19 @@ button{
     margin-bottom: 50px;
 }
 
-footer p{
+address{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-footer a{
-    padding-left: 5px;
+address span{
+    display: inline;
+    padding-top: 10px;
+}
+
+address a{
     color: var(--blue);
 }
 
